Add temporal filtering
